# Avalanche

./: .gitignore  LICENSE  README.md
BOM/: BOM.xlsx
CADFiles/: BaseTubeLeft.sldprt  ElectronicBox.sldprt  HexWheelAdapter12_6mm.sldprt  MotorHolder - Copy.sldprt  MotorHolder1.sldprt  MotorHolderMirror.sldprt  PVC pipe.SLDPRT  PVC pipe1.5.SLDPRT  PanAndTilt1.SLDASM  PilarLeftMirror.SLDPRT  Pololu_GearMotor_37Dmm.SLDASM  Pololu_GearMotor_37Dmm.SLDPRT  Pololu_ShaftGearMotor6mm.SLDPRT  SuspensionOtherSide.sldprt  rotation attachment.SLDPRT  switch.SLDPRT  tire_rim.SLDPRT
cad/: Arm.sldasm  ArmLeft.sldasm  Assem1.SLDASM  BallBearing16412RS.sldprt  BottomHolderMirror.sldprt  BottomHolderr.sldprt  CameraMount.SLDASM  ElectronicBox.sldasm  LID.SLDPRT  MotorHolder.sldprt  MotorHolder1-Mirror.sldprt  PanAndTilt.SLDASM  Part4.SLDPRT  PilarRightMirror.SLDPRT  Pololu_GearMotor_37Dmm.SLDASM  Pololu_L-Bracket_37Dmm.SLDPRT  SR1641C_2RS_MG2.SLDPRT  ShockAbsorber.SLDASM  Suspension.sldprt  Tire.SLDPRT  TopHolder.sldprt  TopHolderMirror.sldprt  Wheel.sldasm  basePanTilt.SLDPRT  box.SLDPRT  main.SLDASM  rotation for spring.SLDASM  springHolder.SLDPRT  springLauncher.SLDASM
software/classifier/: CMakeLists.txt  usbreset
software/classifier/caffeModel/: deploy.prototxt  info.json  mean.binaryproto  snapshot_iter_330.caffemodel  solver.prototxt  train_val.prototxt
software/classifier/include/: comm_utils.h  cv_utils.h
software/classifier/src/: main.cpp  main.cpp1
stl/: BottomEndJoint.STL  BottomHolderMirror.STL  BottomHolderr.STL  BottomMiddleJoint.STL  CameraHolder.STL  (+10 more)
(+19 files in other folders)
